- added button to delete tasks from active job - tasks can now be readonly (no delete!) - added a number of actions affecting the active job - machine area no longer overflows workspace

--- a/client/src/components/console/console.less
+++ b/client/src/components/console/console.less
@@ -1,8 +1,8 @@
 @import "../../variables.less";
 
 .console-panel {
-  flex: 0 0 auto;
-  height: 200px;
+  flex: 0 1 200px;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
 
