--- a/client/src/components/workspace/workspace.less
+++ b/client/src/components/workspace/workspace.less
@@ -1,6 +1,7 @@
 @import "../../variables.less";
 
-.workspace-panel {
+.panel.workspace-panel {
+  flex: 1 0 auto;
   .machine-bed {
     border: 1px dashed #f5d005;
     position: relative;
